--- a/responsive.css
+++ b/responsive.css
@@ -38,7 +38,7 @@
      /* Main page - 1 -> iPhone 14 Pro */
  
      .mainpage1 {
-         background-image: url("/resp1.jpg");
+         background-image: url("resp1.jpg");
          height: 515px;
      }
  
@@ -59,7 +59,7 @@
      /* Main page - 2 -> iPhone 14 */
  
      .mainpage2 {
-         background-image: url("/resp3.jpg");
+         background-image: url("resp3.jpg");
          height: 550px;
          z-index: 3;
      }
@@ -67,7 +67,7 @@
      /* Main page - 3 -> Apple watch */
  
      .mainpage3 {
-         background-image: url("/hero_apple_watch_series_9_order__d0fi9mb84dci_small_2x.jpg");
+         background-image: url("hero_apple_watch_series_9_order__d0fi9mb84dci_small_2x.jpg");
          height: 545px;
          background-color: black;
          color: white;
@@ -81,12 +81,12 @@
      }
  
      .promo1 {
-         background-image: url("/promo_apple_watch_ultra2_order__dyxqj5ia98om_small_2x.jpg");
+         background-image: url("promo_apple_watch_ultra2_order__dyxqj5ia98om_small_2x.jpg");
          height: 490px;
      }
  
      .promo2 {
-         background-image: url("/resp4.jpg");
+         background-image: url("resp4.jpg");
      }
  
      .promo3 {
@@ -95,14 +95,14 @@
      }
  
      .promo4 {
-         background-image: url("/promo_apple_watch_se_order__j70okzn28uye_small_2x.jpg");
+         background-image: url("promo_apple_watch_se_order__j70okzn28uye_small_2x.jpg");
          height: 500px;
      }
      .promo5 {
-        background-image: url("/resp4.jpg");
+        background-image: url("resp4.jpg");
      }
  
      .promo6 {
-         background-image: url("/promo_apple_watch_ultra2_order__dyxqj5ia98om_small_2x.jpg");
+         background-image: url("promo_apple_watch_ultra2_order__dyxqj5ia98om_small_2x.jpg");
      }
  }
