--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 *{
   margin: 0;
   padding: 0;
+  cursor: pointer;
 }
 
 body {
@@ -18,6 +19,7 @@ a {
 h1{
     font-size: 12px;
     margin-bottom: 13px;
+  cursor: pointer;
 }
 
 /* Navbar Styles */
